test/parser/input_programs/invalid_programs/program3.tea
# arguments needed for func exp
-> x